            Bangle.js: allow custom splash screen with .splash file
            Pixl.js: Fix E.showMessage
            Puck.js v1: Fix regression that stopped Puck.IR(data) working - Puck.IR(data,D26,D25) required
            Puck.js v2: Ensure FET is used for IR output, fix selfTest errors for IR and Blue LED
            Bangle.js: Big speed improvements for 120x120 and 80x80 gfx modes

     2v05 : Add Array.includes
            Fix (Number.toFixed) rounding, eg (1234.505).toFixed(2)
            nRF52: If a central is connected to Espruino but isn't reading from UART, don't block waiting to send data
            ESP8266: reverse fix #1679
            Added Graphics.getFont/setFont/getFonts
            Added Graphics.getFontHeight
            Added option to compile in 6x8 fixed-width fonts
            Fix issue where Util Timer timers could break after a call to setTime
            nRF52: Enable DMA for SPI send
            Added option to build in TensorFlow Lite for AI
            Documentation for modules now includes require('...') in the call type to be less confusing
            ESP8266: warning: Empty loadable segment detected (fix #1690) 
            nRF52: Add NRF.nfcPair(...) and OOB pairing to allow tap to pair over BLE
            nRF52: Add NRF.nfcAndroidApp(...) to launch an Android app on touch
            Pixl.js remove SHA512 to make room for new NFC functionality
            Graphics.setFont("4x6",2) will now double the size of a bitmap font
            Graphics.drawImage can now take a String of data for an image (eg. direct from Storage)
            nRF5x: Support connection to devices with RANDOM_PRIVATE_RESOLVABLE and RANDOM_PRIVATE_NON_RESOLVABLE addresses
            Pixl.js: Move SCK pin used during Neopixel writes to ensure it doesn't interfere with BTN3
            nRF52: Fix alignment issue with Nordic's SDK12 code that stopped passkey pairing from working sometimes