@@ -15,3 +15,9 @@
 
 void lcdInit_ArrayBuffer(JsGraphics *gfx);
 void lcdSetCallbacks_ArrayBuffer(JsGraphics *gfx);
+
+// these use gfx->backendData as a pointer to data. They're exported so lcd_st7789_8bit can use them for fast offscreen rendering
+void lcdSetPixel_ArrayBuffer_flat8(JsGraphics *gfx, int x, int y, unsigned int col);
+unsigned int lcdGetPixel_ArrayBuffer_flat8(struct JsGraphics *gfx, int x, int y);
+void lcdFillRect_ArrayBuffer_flat8(JsGraphics *gfx, int x1, int y1, int x2, int y2, unsigned int col);
+void lcdScroll_ArrayBuffer_flat8(JsGraphics *gfx, int xdir, int ydir);
