@@ -11,6 +11,8 @@
             Puck.js v1: Fix regression that stopped Puck.IR(data) working - Puck.IR(data,D26,D25) required
             Puck.js v2: Ensure FET is used for IR output, fix selfTest errors for IR and Blue LED
             Bangle.js: Big speed improvements for 120x120 and 80x80 gfx modes
+            Enable Graphics arraybuffer optimisations on all but low-end devices
+            Add specific Graphics optimisations for 1 and 8 bit rendering
 
      2v05 : Add Array.includes
             Fix (Number.toFixed) rounding, eg (1234.505).toFixed(2)
